--- a/build.gradle
+++ b/build.gradle
@@ -15,40 +15,37 @@
  */
 
 buildscript {
-    ext.kotlin_version = '1.4.31'
-    ext.compose_version = '1.0.0-beta02'
-    ext.coroutines_version = '1.4.2'
-
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha09'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.android.tools.build:gradle:8.11.1"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.2.0"
     }
 }
 
 plugins {
-    id 'com.diffplug.spotless' version '5.7.0'
+    id "org.jetbrains.kotlin.plugin.compose" version "2.2.0" apply false
+    id "com.diffplug.spotless" version "7.2.1"
 }
 
 subprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
-    apply plugin: 'com.diffplug.spotless'
+    apply plugin: "com.diffplug.spotless"
     spotless {
         kotlin {
-            target '**/*.kt'
-            targetExclude("$buildDir/**/*.kt")
-            targetExclude('bin/**/*.kt')
+            target "**/*.kt"
+            targetExclude("**/build/**/*.kt")
+            targetExclude("bin/**/*.kt")
 
-            ktlint("0.40.0")
-            licenseHeaderFile rootProject.file('spotless/copyright.kt')
+            ktlint("1.7.0")
+            licenseHeaderFile rootProject.file("spotless/copyright.kt")
         }
     }
 }
