Rename the package name
Rename the package name to com.androiddevchallenge.week3.americas to
differentiate the different projects of the Android Dev Challenge.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 }
 
 android {
-    namespace = "com.example.androiddevchallenge"
+    namespace = "com.androiddevchallenge.week3.americas"
 
     compileSdkVersion 36
 
     defaultConfig {
-        applicationId "com.example.androiddevchallenge"
+        applicationId "com.androiddevchallenge.week3.americas"
         minSdkVersion 23
         targetSdkVersion 36
         versionCode 1
