--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "org.jetbrains.kotlin.plugin.compose"
+    id "org.jetbrains.kotlin.plugin.serialization"
 }
 
 android {
@@ -73,4 +74,6 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.8.3"
     implementation "androidx.compose.material:material:1.8.3"
     implementation "androidx.compose.ui:ui-tooling:1.8.3"
+    implementation "androidx.navigation:navigation-compose:2.9.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0"
 }
