--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ buildscript {
 
 plugins {
     id "org.jetbrains.kotlin.plugin.compose" version "2.2.0" apply false
+    id "org.jetbrains.kotlin.plugin.serialization" version "2.2.0" apply false
     id "com.diffplug.spotless" version "7.2.1"
 }
 
