--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,8 +71,9 @@ android {
 
 dependencies {
     implementation "androidx.activity:activity-compose:1.10.1"
-    implementation "androidx.compose.ui:ui:1.8.3"
     implementation "androidx.compose.material:material:1.8.3"
+    implementation "androidx.compose.material:material-icons-extended:1.7.8"
+    implementation "androidx.compose.ui:ui:1.8.3"
     implementation "androidx.compose.ui:ui-tooling:1.8.3"
     implementation "androidx.navigation:navigation-compose:2.9.3"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0"
