--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,6 @@ dependencies {
     implementation "androidx.compose.ui:ui:1.8.3"
     implementation "androidx.compose.ui:ui-tooling:1.8.3"
     implementation "androidx.navigation:navigation-compose:2.9.3"
+    implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.4.0"
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0"
 }
